Bug 396868 - When printed on paper there is no any evidence that printed mails are signed or encrypted with valid and trusted key
Summary: When printed on paper there is no any evidence that printed mails are signed ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.7.3
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-26 09:08 UTC by kiv
Modified: 2018-07-31 05:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kiv 2018-07-26 09:08:54 UTC
We are using lately many digitally signed and/or encrypted Emails.
KMail with gpg is doing great job in providing this.

But there is missing a very important functionality in kMail.
Most of users would like to have such signed or/and encrypted E-mails printed on paper.

But after the printing of such E-mails, on the paper are missing any evidences that the printed E-mail is signed or/and encrypted by certain person and if the message signature is valid and if the key is trusted.
This possibility is urgently needed in many cases of the real life and is creating a lot of troubles when encrypted or/and signed messages need to be printed.

In such messages there is a hidden part caleld Details.
If the user will click on the link 'Show  Details' in the top of such messages he/she can see some info like following:

"Message was signed by user@domain.net (Key ID: 0x5D5F095FF339EF76). 
The signature is valid and the key is fully trusted."

or

"Message was encrypted by user@domain.net (Key ID: 0x5D5F095FF339EF76). 
The signature is valid and the key is fully trusted."

or

"Message was signed and encrypted by user@domain.net (Key ID: 0x5D5F095FF339EF76). 
The signature is valid and the key is fully trusted."

Please provide a option in the UI where users could choose if this details will be printed on top of the message text or not.
Then when needed users will have the chance to print such messages with visible evidences about the signature or/and encryption status of the printed documents.

Hopefully this will be easy to realize and can be made available very soon.
Comment 1 Laurent Montel 2018-07-26 11:44:40 UTC
Indeed it can be useful.
I will work on it soon.
Comment 2 Laurent Montel 2018-07-27 06:12:22 UTC
Now we can print signature details (in future 5.10)
Comment 3 Laurent Montel 2018-07-31 05:54:17 UTC
Git commit 8452d1a5422a003a995ca8314ec42f8dab14a8a2 by Laurent Montel.
Committed on 31/07/2018 at 05:53.
Pushed by mlaurent into branch 'master'.

Fix Bug 396868 - When printed on paper there is no any evidence that printed mails are signed or encrypted with valid and trusted key
FIXED-IN: 5.10.0

M  +2    -2    src/kmmainwidget.cpp
M  +2    -2    src/kmreaderwin.cpp
M  +2    -2    src/messageactions.cpp

https://commits.kde.org/kmail/8452d1a5422a003a995ca8314ec42f8dab14a8a2