Fix Bug 396868 - When printed on paper there is no any evidence that printed mails are signed or encrypted with valid and trusted key

BUG: 396868
FIXED-IN: 5.10.0